--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ php:
 # faster builds on new travis setup not using sudo
 sudo: false
 
+before_install:
+  - echo "extension = apc.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 install:
   - travis_retry composer self-update && composer --version
   - travis_retry composer update --dev --prefer-dist --no-interaction
