--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ php:
 # faster builds on new travis setup not using sudo
 sudo: false
 
+before_install:
+  - pecl -q install -f apcu
+
 install:
   - travis_retry composer self-update && composer --version
   - travis_retry composer update --dev --prefer-dist --no-interaction
