--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ sudo: false
 
 before_install:
   - pecl channel-update pecl.php.net
-  - pecl -q install -f apcu
+  - yes "" | pecl -q install -f apcu
 
 install:
   - travis_retry composer self-update && composer --version
